# XRAY-Win-Linux-client

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Xray/configs/: config.json
components/: closebutton.cpp  closebutton.h  connectanimation.cpp  connectanimation.h  erroranimation.cpp  erroranimation.h  minimizebutton.cpp  minimizebutton.h  onanimation.cpp  onanimation.h  powerbutton.cpp  powerbutton.h
res/: res.qrc
